--- a/plugins-fixed/MVerb.lv2/modgui/stylesheet-mverb.css
+++ b/plugins-fixed/MVerb.lv2/modgui/stylesheet-mverb.css
@@ -1,220 +1,283 @@
-/* SKINS */
-.mod-combo-model-001{{{cns}}} {
-    border-radius: 20px;
-}
-.mod-combo-model-001-0550{{{cns}}} {
-    background-image: url(/resources/combos/model-001/model-0550.png{{{ns}}});
-    background-position: center center;
-    background-repeat: no-repeat;
-    height: 200px;
-    position: relative;
-    width: 550px;
-}
+/* STYLES FOR THE JAPANESE PEDAL */
 
-.mod-combo-model-001-0625{{{cns}}} {
-    background-image: url(/resources/combos/model-001/model-0625.png{{{ns}}});
-    background-position: center center;
-    background-repeat: no-repeat;
-    height: 200px;
-    position: relative;
-    width: 625px;
+@import url(/fonts/epf/stylesheet.css);
+@import url(/fonts/nexa/stylesheet.css);
+@import url(/fonts/pirulen/stylesheet.css);
+@import url(/fonts/questrial/stylesheet.css);
+
+/* = CONTAINER
+================================================ */
+.mod-pedal-japanese{{{cns}}} {
+    background-position:center center;
+    background-repeat:no-repeat;
+    height:530px;
+    position:absolute;
+    width:274px;
+    border-radius: 18px;
 }
 
-.mod-combo-model-001-0778{{{cns}}} {
-    background-image: url(/resources/combos/model-001/model-0778.png{{{ns}}});
-    background-position: center center;
-    background-repeat: no-repeat;
-    height: 200px;
-    position: relative;
-    width: 778px;
+/* PORTS
+================================================ */
+
+.mod-pedal-japanese{{{cns}}}.mod-pedal .mod-pedal-input,
+.mod-pedal-japanese{{{cns}}}.mod-pedal .mod-pedal-output {
+    top: 186px;
 }
 
-.mod-combo-model-001-0930{{{cns}}} {
-    background-image: url(/resources/combos/model-001/model-0930.png{{{ns}}});
-    background-position: center center;
-    background-repeat: no-repeat;
-    height: 200px;
-    position: relative;
-    width: 930px;
+/* = PLUGIN'S AUTHOR
+================================================ */
+.mod-pedal-japanese{{{cns}}} .mod-plugin-brand {
+    bottom:95px;
+    left:30px;
+    position:absolute;
+    right:30px;
+    text-align:center;
+    text-transform:uppercase;
 }
 
-
-/* THE AUTHOR */
-.mod-combo-model-001{{{cns}}} .mod-plugin-brand h1 {
-    color: #333;
-    font-size: 18px;
-    font-weight: bold;
-    left: 80px;
-    line-height: 1;
-    margin: 0;
-    position: absolute;
-    top: 23px;
+.mod-pedal-japanese{{{cns}}} .mod-plugin-brand h1 {
+    color:#292d31;
+    font-family:"Nexa";
+    font-size:32px;
+    text-shadow:1px 2px 2px rgba(0,0,0,.5),2px 4px 5px rgba(0,0,0,.5),0px 0px 8px rgba(0,0,0,.5), -1px -1px 1px rgba(255,255,255,.2);
 }
 
-/* PLUGIN'S NAME */
-.mod-combo-model-001{{{cns}}} .mod-plugin-name h1 {
-    color: #333;
-    font-size: 18px;
-    font-weight: bold;
-    line-height: 1;
-    margin: 0;
-    position: absolute;
-    right: 80px;
-    top: 23px;
-}
-
-/* CONTROLS */
-.mod-combo-model-001{{{cns}}} .mod-control-group {
-    border-color: #000;
-    border-style: solid;
-    border-width: 1px 0 0 0;
-    bottom: 149px;
-    color: #000;
-    font-size: 10px;
-    font-weight: bold;
-    height: 71px;
-    left: 58px;
-    position: absolute;
-    right: 58px;
-    top: 47px;
-}
-
-.mod-combo-model-001{{{cns}}} .mod-control-group > div {
-    margin-right: 2px;
-}
-
-.mod-combo-model-001{{{cns}}} .mod-pedal-input,
-.mod-combo-model-001{{{cns}}} .mod-pedal-output {
-    top: 30px;
-}
-
-/* SWITCH ON/OFF GENERAL */
-.mod-combo-model-001{{{cns}}} .mod-switch {
-    cursor: pointer;
-    float: left;
-    height: 71px;
-    position: relative;
-    width: 130px;
-}
-
-.mod-combo-model-001{{{cns}}} .mod-switch-image {
-    background-image: url(/resources/switches/switch-001.png{{{ns}}});
-    background-position: -9px 0px;
-    background-repeat: no-repeat;
-    background-size: auto 71px;
-    height: 71px;
-    width: 71px;
-}
-
-.mod-combo-model-001{{{cns}}} .mod-switch-image.on {
-    background-position: -80px 0px;
-}
-
-.mod-combo-model-001{{{cns}}} .mod-switch-image.off {
-    background-position: -9px 0px;
-}
-
-/* CHICKEN HEAD */
-.mod-combo-model-001{{{cns}}} .mod-chicken-head {
-    float: left;
-    height: 71px;
-    overflow: hidden;
-    position: relative;
-    text-align: center;
-    width: 71px;
-}
-
-.mod-combo-model-001{{{cns}}} .mod-chicken-head .mod-chicken-head-image {
-    background-image: url(/resources/knobs/chicken-head/_strip.png{{{ns}}});
-    background-position: left 0px;
-    background-repeat: no-repeat;
-    background-size: auto 71px;
-    height: 71px;
-    margin-top: 3px;
-    position: relative;
-    width: 71px;
-    z-index: 2;
-}
-
-.mod-combo-model-001{{{cns}}} .mod-chicken-head .mod-chicken-head-title {
-    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
-    font-size: 10px;
-    font-weight: bold;
-    height:18px;
-    left: 0;
-    overflow:hidden;
-    position: absolute;
-    right: 0;
-    text-transform: uppercase;
-    top: 0;
-    z-index: 1;
-}
-
-/* ENUMERATED LIST */
-.mod-combo-model-001{{{cns}}} .mod-enumerated {
-    color:#fff;
-    display:inline-block;
-    left:132px;
+/* = PLUGIN'S NAME
+================================================ */
+.mod-pedal-japanese{{{cns}}} .mod-plugin-name {
+    bottom:210px;
+    left:30px;
     overflow:hidden;
     position:absolute;
-    top:-27px;
-    width:240px;
+    right:30px;
+    text-align:right;
+    top:230px;
 }
 
-.mod-combo-model-001{{{cns}}} .mod-enumerated .mod-enumerated-selected {
-    background-color:rgba(0,0,0,.8);
-    background-image:url(/resources/utils/dropdown-arrow-white.png{{{ns}}});
-    background-position:right center;
-    background-repeat:no-repeat;
-    border-radius:4px;
-    box-shadow:inset 1px 1px 5px #000;
-    color:#fff;
-    font-size:12px;
-    height:24px;
-    line-height:2;
-    margin-right:8px;
-    overflow:hidden;
-    padding:0 9px;
+.mod-pedal-japanese{{{cns}}} .mod-plugin-name h1 {
+    font-family:"Questrial";
+    font-size:24px;
+    line-height:1;
 }
 
-/* WHEN IS HOVER */
-.mod-combo-model-001{{{cns}}} .mod-enumerated:hover .mod-enumerated-selected {
-    border-radius:4px 4px 0 0;
+/* = LIGHT ON/OFF
+================================================ */
+.mod-pedal-japanese{{{cns}}} .mod-light {
+    height:32px;
+    left:121px;
+    position:absolute;
+    top:197px;
+    width:32px;
 }
 
-/* THE LIST OF OPTIONS */
-.mod-combo-model-001{{{cns}}} .mod-enumerated .mod-enumerated-list {
-    display:none;
-    font-weight:bold;
-}
-
-.mod-combo-model-001{{{cns}}} .mod-enumerated .mod-enumerated-list > div {
-    padding:3px 9px;
-}
-
-.mod-combo-model-001{{{cns}}} .mod-enumerated .mod-enumerated-list > div:hover {
-    background:rgba(255,255,255,.2);
+/* = FOOTSWITCH
+================================================ */
+.mod-pedal-japanese{{{cns}}} .mod-footswitch {
+    bottom:46px;
     cursor:pointer;
+    height:155px;
+    left:13px;
+    position:absolute;
+    right:13px;
 }
 
-/* WHEN THE LIST IS SHOWING */
-.mod-combo-model-001{{{cns}}} .mod-enumerated .mod-enumerated-list {
-    background:rgba(0,0,0,.9);
-    display:none;
-    height:85px;
-    overflow:auto;
+
+/* = BACKGROUND IMAGES - Colour of the pedal
+================================================ */
+.mod-pedal-japanese{{{cns}}}.mod-blue { background-image:url(/resources/pedals/japanese/blue.png{{{ns}}}); }
+.mod-pedal-japanese{{{cns}}}.mod-brown { background-image:url(/resources/pedals/japanese/brown.png{{{ns}}}); }
+.mod-pedal-japanese{{{cns}}}.mod-none { background-image:url(/resources/pedals/japanese/none.png{{{ns}}}); }
+.mod-pedal-japanese{{{cns}}}.mod-gray { background-image:url(/resources/pedals/japanese/gray.png{{{ns}}}); }
+.mod-pedal-japanese{{{cns}}}.mod-darkblue { background-image:url(/resources/pedals/japanese/darkblue.png{{{ns}}}); }
+.mod-pedal-japanese{{{cns}}}.mod-purple { background-image:url(/resources/pedals/japanese/purple.png{{{ns}}}); }
+.mod-pedal-japanese{{{cns}}}.mod-green { background-image:url(/resources/pedals/japanese/green.png{{{ns}}}); }
+.mod-pedal-japanese{{{cns}}}.mod-yellow { background-image:url(/resources/pedals/japanese/yellow.png{{{ns}}}); }
+.mod-pedal-japanese{{{cns}}}.mod-petrol { background-image:url(/resources/pedals/japanese/petrol.png{{{ns}}}); }
+.mod-pedal-japanese{{{cns}}}.mod-pink { background-image:url(/resources/pedals/japanese/pink.png{{{ns}}}); }
+.mod-pedal-japanese{{{cns}}}.mod-black { background-image:url(/resources/pedals/japanese/black.png{{{ns}}}); }
+.mod-pedal-japanese{{{cns}}}.mod-orange { background-image:url(/resources/pedals/japanese/orange.png{{{ns}}}); }
+.mod-pedal-japanese{{{cns}}}.mod-cyan { background-image:url(/resources/pedals/japanese/cyan.png{{{ns}}}); }
+.mod-pedal-japanese{{{cns}}}.mod-white { background-image:url(/resources/pedals/japanese/white.png{{{ns}}}); }
+.mod-pedal-japanese{{{cns}}}.mod-racing { background-image:url(/resources/pedals/japanese/racing.png{{{ns}}}); }
+.mod-pedal-japanese{{{cns}}}.mod-red { background-image:url(/resources/pedals/japanese/red.png{{{ns}}}); }
+.mod-pedal-japanese{{{cns}}}.mod-cream { background-image:url(/resources/pedals/japanese/cream.png{{{ns}}}); }
+
+
+
+.mod-pedal-japanese{{{cns}}}.mod-blue .mod-enumerated,
+.mod-pedal-japanese{{{cns}}}.mod-brown .mod-enumerated,
+.mod-pedal-japanese{{{cns}}}.mod-none .mod-enumerated,
+.mod-pedal-japanese{{{cns}}}.mod-gray .mod-enumerated,
+.mod-pedal-japanese{{{cns}}}.mod-darkblue .mod-enumerated,
+.mod-pedal-japanese{{{cns}}}.mod-purple .mod-enumerated,
+.mod-pedal-japanese{{{cns}}}.mod-green .mod-enumerated,
+.mod-pedal-japanese{{{cns}}}.mod-yellow .mod-enumerated,
+.mod-pedal-japanese{{{cns}}}.mod-petrol .mod-enumerated,
+.mod-pedal-japanese{{{cns}}}.mod-pink .mod-enumerated,
+.mod-pedal-japanese{{{cns}}}.mod-black .mod-enumerated,
+.mod-pedal-japanese{{{cns}}}.mod-orange .mod-enumerated,
+.mod-pedal-japanese{{{cns}}}.mod-cyan .mod-enumerated,
+.mod-pedal-japanese{{{cns}}}.mod-racing .mod-enumerated,
+.mod-pedal-japanese{{{cns}}}.mod-red .mod-enumerated,
+.mod-pedal-japanese{{{cns}}}.mod-cream .mod-enumerated
+{
+    background-image:url(/resources/utils/dropdown-arrow-white.png{{{ns}}});
+}
+.mod-pedal-japanese{{{cns}}}.mod-white .mod-enumerated
+{
+    background-image:url(/resources/utils/dropdown-arrow-white.png{{{ns}}});
+}
+.mod-pedal-japanese{{{cns}}}.mod-blue .mod-plugin-name h1,
+.mod-pedal-japanese{{{cns}}}.mod-blue .mod-enumerated,
+.mod-pedal-japanese{{{cns}}}.mod-blue .mod-control-group .mod-knob > span.mod-knob-title,
+.mod-pedal-japanese{{{cns}}}.mod-brown .mod-plugin-name h1,
+.mod-pedal-japanese{{{cns}}}.mod-brown .mod-enumerated,
+.mod-pedal-japanese{{{cns}}}.mod-brown .mod-control-group .mod-knob > span.mod-knob-title,
+.mod-pedal-japanese{{{cns}}}.mod-none .mod-plugin-name h1,
+.mod-pedal-japanese{{{cns}}}.mod-none .mod-enumerated,
+.mod-pedal-japanese{{{cns}}}.mod-none .mod-control-group .mod-knob > span.mod-knob-title,
+.mod-pedal-japanese{{{cns}}}.mod-gray .mod-plugin-name h1,
+.mod-pedal-japanese{{{cns}}}.mod-gray .mod-enumerated,
+.mod-pedal-japanese{{{cns}}}.mod-gray .mod-control-group .mod-knob > span.mod-knob-title,
+.mod-pedal-japanese{{{cns}}}.mod-darkblue .mod-plugin-name h1,
+.mod-pedal-japanese{{{cns}}}.mod-darkblue .mod-enumerated,
+.mod-pedal-japanese{{{cns}}}.mod-darkblue .mod-control-group .mod-knob > span.mod-knob-title,
+.mod-pedal-japanese{{{cns}}}.mod-purple .mod-plugin-name h1,
+.mod-pedal-japanese{{{cns}}}.mod-purple .mod-enumerated,
+.mod-pedal-japanese{{{cns}}}.mod-purple .mod-control-group .mod-knob > span.mod-knob-title,
+.mod-pedal-japanese{{{cns}}}.mod-green .mod-plugin-name h1,
+.mod-pedal-japanese{{{cns}}}.mod-green .mod-enumerated,
+.mod-pedal-japanese{{{cns}}}.mod-green .mod-control-group .mod-knob > span.mod-knob-title,
+.mod-pedal-japanese{{{cns}}}.mod-yellow .mod-plugin-name h1,
+.mod-pedal-japanese{{{cns}}}.mod-yellow .mod-enumerated,
+.mod-pedal-japanese{{{cns}}}.mod-yellow .mod-control-group .mod-knob > span.mod-knob-title,
+.mod-pedal-japanese{{{cns}}}.mod-petrol .mod-plugin-name h1,
+.mod-pedal-japanese{{{cns}}}.mod-petrol .mod-enumerated,
+.mod-pedal-japanese{{{cns}}}.mod-petrol .mod-control-group .mod-knob > span.mod-knob-title,
+.mod-pedal-japanese{{{cns}}}.mod-pink .mod-plugin-name h1,
+.mod-pedal-japanese{{{cns}}}.mod-pink .mod-enumerated,
+.mod-pedal-japanese{{{cns}}}.mod-pink .mod-control-group .mod-knob > span.mod-knob-title,
+.mod-pedal-japanese{{{cns}}}.mod-black .mod-plugin-name h1,
+.mod-pedal-japanese{{{cns}}}.mod-black .mod-enumerated,
+.mod-pedal-japanese{{{cns}}}.mod-black .mod-control-group .mod-knob > span.mod-knob-title,
+.mod-pedal-japanese{{{cns}}}.mod-orange .mod-plugin-name h1,
+.mod-pedal-japanese{{{cns}}}.mod-orange .mod-enumerated,
+.mod-pedal-japanese{{{cns}}}.mod-orange .mod-control-group .mod-knob > span.mod-knob-title,
+.mod-pedal-japanese{{{cns}}}.mod-cyan .mod-plugin-name h1,
+.mod-pedal-japanese{{{cns}}}.mod-cyan .mod-enumerated,
+.mod-pedal-japanese{{{cns}}}.mod-cyan .mod-control-group .mod-knob > span.mod-knob-title,
+.mod-pedal-japanese{{{cns}}}.mod-racing .mod-plugin-name h1,
+.mod-pedal-japanese{{{cns}}}.mod-racing .mod-enumerated,
+.mod-pedal-japanese{{{cns}}}.mod-racing .mod-control-group .mod-knob > span.mod-knob-title,
+.mod-pedal-japanese{{{cns}}}.mod-red .mod-plugin-name h1,
+.mod-pedal-japanese{{{cns}}}.mod-red .mod-enumerated,
+.mod-pedal-japanese{{{cns}}}.mod-red .mod-control-group .mod-knob > span.mod-knob-title,
+.mod-pedal-japanese{{{cns}}}.mod-cream .mod-plugin-name h1,
+.mod-pedal-japanese{{{cns}}}.mod-cream .mod-enumerated,
+.mod-pedal-japanese{{{cns}}}.mod-cream .mod-control-group .mod-knob > span.mod-knob-title
+{
+    color:white;
+}
+.mod-pedal-japanese{{{cns}}}.mod-white .mod-plugin-name h1,
+.mod-pedal-japanese{{{cns}}}.mod-white .mod-enumerated,
+.mod-pedal-japanese{{{cns}}}.mod-white .mod-control-group .mod-knob > span.mod-knob-title
+{
+    color:#7F7F7F;
+}
+
+/* STYLES FOR THE JAPANESE KNOB */
+
+
+/* = KNOBS
+================================================ */
+.mod-pedal-japanese{{{cns}}} .mod-control-group.mod-blue .mod-knob .mod-knob-image {
+    background-image:url(/resources/knobs/japanese/blue.png{{{ns}}});
+}.mod-pedal-japanese{{{cns}}} .mod-control-group.mod-brown .mod-knob .mod-knob-image {
+    background-image:url(/resources/knobs/japanese/brown.png{{{ns}}});
+}.mod-pedal-japanese{{{cns}}} .mod-control-group.mod-none .mod-knob .mod-knob-image {
+    background-image:url(/resources/knobs/japanese/none.png{{{ns}}});
+}.mod-pedal-japanese{{{cns}}} .mod-control-group.mod-gray .mod-knob .mod-knob-image {
+    background-image:url(/resources/knobs/japanese/gray.png{{{ns}}});
+}.mod-pedal-japanese{{{cns}}} .mod-control-group.mod-darkblue .mod-knob .mod-knob-image {
+    background-image:url(/resources/knobs/japanese/darkblue.png{{{ns}}});
+}.mod-pedal-japanese{{{cns}}} .mod-control-group.mod-purple .mod-knob .mod-knob-image {
+    background-image:url(/resources/knobs/japanese/purple.png{{{ns}}});
+}.mod-pedal-japanese{{{cns}}} .mod-control-group.mod-green .mod-knob .mod-knob-image {
+    background-image:url(/resources/knobs/japanese/green.png{{{ns}}});
+}.mod-pedal-japanese{{{cns}}} .mod-control-group.mod-yellow .mod-knob .mod-knob-image {
+    background-image:url(/resources/knobs/japanese/yellow.png{{{ns}}});
+}.mod-pedal-japanese{{{cns}}} .mod-control-group.mod-petrol .mod-knob .mod-knob-image {
+    background-image:url(/resources/knobs/japanese/petrol.png{{{ns}}});
+}.mod-pedal-japanese{{{cns}}} .mod-control-group.mod-pink .mod-knob .mod-knob-image {
+    background-image:url(/resources/knobs/japanese/pink.png{{{ns}}});
+}.mod-pedal-japanese{{{cns}}} .mod-control-group.mod-black .mod-knob .mod-knob-image {
+    background-image:url(/resources/knobs/japanese/black.png{{{ns}}});
+}.mod-pedal-japanese{{{cns}}} .mod-control-group.mod-orange .mod-knob .mod-knob-image {
+    background-image:url(/resources/knobs/japanese/orange.png{{{ns}}});
+}.mod-pedal-japanese{{{cns}}} .mod-control-group.mod-cyan .mod-knob .mod-knob-image {
+    background-image:url(/resources/knobs/japanese/cyan.png{{{ns}}});
+}.mod-pedal-japanese{{{cns}}} .mod-control-group.mod-white .mod-knob .mod-knob-image {
+    background-image:url(/resources/knobs/japanese/white.png{{{ns}}});
+}.mod-pedal-japanese{{{cns}}} .mod-control-group.mod-racing .mod-knob .mod-knob-image {
+    background-image:url(/resources/knobs/japanese/racing.png{{{ns}}});
+}.mod-pedal-japanese{{{cns}}} .mod-control-group.mod-red .mod-knob .mod-knob-image {
+    background-image:url(/resources/knobs/japanese/red.png{{{ns}}});
+}.mod-pedal-japanese{{{cns}}} .mod-control-group.mod-cream .mod-knob .mod-knob-image {
+    background-image:url(/resources/knobs/japanese/cream.png{{{ns}}});
+}
+
+.mod-pedal-japanese{{{cns}}} .mod-control-group {
+    height:141px;
+    left:17px;
+    position:absolute;
+    right:17px;
+    top:18px;
+}
+.mod-pedal-japanese{{{cns}}} .mod-control-group .mod-knob {
+    height:70px;
+    float:left;
+    overflow:hidden;
     position:relative;
-    width:232px;
-    z-index:3;
+    text-align:center;
+    width:60px;
+}
+.mod-pedal-japanese{{{cns}}} .mod-control-group .mod-knob > span.mod-knob-title {
+    color:white;
+    display:block;
+    font-size:10px;
+    font-weight:bold;
+    height:11px;
+    line-height:1;
+    margin:0;
+    padding:0;
+    position:relative;
+    overflow:hidden;
+    text-transform:uppercase;
+}
+.mod-pedal-japanese{{{cns}}} .mod-control-group .mod-knob .mod-knob-image {
+    background-position:left center;
+    background-repeat:no-repeat;
+    background-size:auto 52px;
+    height:52px;
+    margin:0 auto;
+    position:relative;
+    overflow:hidden;
+    width:52px;
 }
 
 
-/* SEPARATOR */
-.mod-combo-model-001{{{cns}}} .mod-separator {
-    background: #000;
-    display: inline-block;
-    float: left;
-    height: 69px;
-    margin-top: 2px;
-    width: 1px;
+/* 4 KNOBS */
+.mod-pedal-japanese{{{cns}}}.mod-four-knobs .mod-control-group {
+    height:70px;
+    top:49px;
+}
+
+/* 7 KNOBS - OPTION 1 */
+.mod-pedal-japanese{{{cns}}}.mod-seven-a-knobs .mod-control-group .mod-knob:first-child {
+    margin-left:30px;
+}
+
+/* 7 KNOBS - OPTION 2 */
+.mod-pedal-japanese{{{cns}}}.mod-seven-b-knobs .mod-control-group .mod-knob:first-child {
+    margin:0 30px;
 }
