--- a/plugins-fixed/gx_hogsfoot.lv2/modgui/stylesheet-gxhogsfoot.css
+++ b/plugins-fixed/gx_hogsfoot.lv2/modgui/stylesheet-gxhogsfoot.css
@@ -37,6 +37,14 @@
     width:421px;
 }
 
+/* PORTS
+================================================ */
+
+.mod-pedal-boxy{{{cns}}}.mod-boxy50 .mod-pedal-input,
+.mod-pedal-boxy{{{cns}}}.mod-boxy50 .mod-pedal-output {
+    top: 66px;
+}
+
 /* = PLUGIN'S AUTHOR
 ================================================ */
 .mod-pedal-boxy{{{cns}}} .mod-plugin-brand {
@@ -365,7 +373,6 @@
     display:block;
     font-size:11px;
     font-weight:bold;
-    height:7px;
     line-height:1;
     margin-bottom:3px;
     overflow:hidden;
