--- a/plugins/ZynAddSubFX.lv2/modgui/stylesheet-zynaddsubfx.css
+++ b/plugins/ZynAddSubFX.lv2/modgui/stylesheet-zynaddsubfx.css
@@ -128,7 +128,7 @@
 }
 
 .mod-pedal-boxy{{{cns}}}.mod-one-footswitch-presets .mod-light {
-  top:120px;
+  top:140px;
 }
 
 
@@ -164,7 +164,7 @@
 }
 
 .mod-pedal-boxy{{{cns}}}.mod-one-footswitch-presets .mod-footswitch {
-    top:170px;
+    top:180px;
 }
 
 
@@ -181,12 +181,21 @@
 }
 
 .mod-pedal-boxy{{{cns}}}.mod-one-footswitch-presets .mod-control-group {
-    margin:10px !important;
+    margin:16px !important;
     top:75px;
+    max-width:calc(100% - 38px);
 }
 
 .mod-pedal-boxy{{{cns}}}.mod-one-footswitch-presets .mod-control-group > select {
     width:100%;
+}
+
+.mod-pedal-boxy{{{cns}}}.mod-one-footswitch-presets .mod-control-group > p {
+    margin: 5px 10px;
+    color: white;
+    font-size: medium;
+    font-weight: bold;
+    text-shadow: 0px 0px 4px black;
 }
 
 .mod-pedal-boxy{{{cns}}} .mod-control-group .mod-knob {
